docs: passer la main — le reste à faire est désormais suivi en issues
Six issues ouvertes (#57 à #62) pour ce qui ne vivait que dans cette note et
dans une fiche de mémoire : le 429, le profil Automatique, la recherche vocale
Android Auto, la coupure réseau pendant un transcodage, la validation sur
appareil, et l'avertissement de compilation traînant depuis la #54.

Corrige aussi une affirmation devenue fausse : l'état du dépôt promettait
« aucun avertissement de compilation ». Il y en a un depuis quatre jours. Il ne
se voit pas sur un build tiède, ce qui est le vrai enseignement.

Claude-Session: https://claude.ai/code/session_01DuAkELCtDsv9D4YmcMXESQ